<resources>
    <string name="app_name">Dhyana-android-UI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discover">Discover</string>
    <string name="sub_heading">Quality products from household are guaranteed.</string>
    <string name="title_3rd_fragment">We can make your wish</string>
    <string name="sub_string">Quality products from household are guaranteed.</string>
    <string name="third_screen_heading">We can make your wish</string>
    <string name="third_screen_sub_text">We can make you according to your request because we are concerned with customer satisfaction.</string>
    <string name="get_ready">Get Ready</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="final_submit">"Let's get started"</string>
    <string name="welcome_back">"Welcome back!"</string>
    <string name="enter_user_email">Your Email</string>
    <string name="enter_password">Password</string>
    <string name="remember">Remember</string>
    <string name="forgot_password">"Forget!"</string>
    <string name="create_account">"Create an account?"</string>
    <string name="login_with_twitter">Login With Twitter</string>
    <string name="create_account_signup">Create account</string>
    <string name="username"> Username</string>
    <string name="phone">Phone</string>
    <string name="use_email">Use Email</string>
    <string name="dob">Date of birth</string>
    <string name="signup_substring">"Already have account?"</string>
    <string name="forgot_pwd">Forgot Password</string>
    <string name="forgot_pwd_sub_heading">Please enter your email now, then you will be given a link from emali to create a new password</string>
    <string name="your_email">Your Email</string>
    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>March</item>
        <item>Apr</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>Aug</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="day">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11></item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="year">
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
    </string-array>

    <string name="email_required">"Email Required"</string>
    <string name="valid_email_address">"Valid email address"</string>
    <string name="email_not_valid">"Email is not valid"</string>
    <string name="password_required">Password Required</string>
    <string name="username_required">Username required</string>
    <string name="username_too_long">Username too long</string>
    <string name="space_not_valid">Space is not valid</string>
    <string name="phone_number_required">Phone number required</string>
    <string name="mobile_number_not_valid">Mobile number is not valid, 10 digits required</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="second_sub_heading">"Some products that will be present in the household will provide comfort for you."</string>
    <string name="started_now">Started Now</string>
    <string name="chair">Chair</string>
    <string name="no_of_items">250 items</string>
    <string name="send">Send</string>
    <string name="explore">Explore</string>
    <string name="popular">Popular</string>
    <string name="discover_sub_heading">Quality products from household are guaranteed.</string>
    <string name="daytona_dining_chair">Daytona dining chair</string>
    <string name="price_for_daytona">$45.00</string>
    <string name="add_to_cart">Add to cart</string>
</resources>
