<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tvWelcomeHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_45sdp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_user_email"
        app:layout_constraintStart_toStartOf="@id/tvWelcomeHeading"
        app:layout_constraintTop_toBottomOf="@id/tvWelcomeHeading"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_45sdp" />

    <EditText
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintStart_toStartOf="@id/etEmail"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintEnd_toEndOf="@id/etEmail"
        android:layout_marginTop="@dimen/_20sdp" />

    <Switch
        android:id="@+id/mySwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="@id/etPassword"
        android:layout_marginTop="@dimen/_25sdp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFinalLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        app:layout_constraintTop_toBottomOf="@id/mySwitch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_45sdp"
        android:layout_marginLeft="@dimen/_50sdp"
        android:text="@string/login"
        android:textSize="@dimen/_15sdp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginRight="@dimen/_50sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember"
        android:textSize="@dimen/_10sdp"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintStart_toEndOf="@id/mySwitch"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        android:layout_marginTop="@dimen/_27sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="@dimen/_10sdp"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        android:layout_marginTop="@dimen/_25sdp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_35sdp"/>

    <TextView
        android:id="@+id/tv_create_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        app:layout_constraintTop_toBottomOf="@id/btnFinalLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginTop="@dimen/_25sdp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_with_twitter"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@id/btnFinalLogin"
        app:layout_constraintEnd_toEndOf="@id/btnFinalLogin"
        android:textColor="#4EA7FA"
        android:background="@drawable/shape_for_twitter_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_45sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>