<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pwd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_45sdp"/>

    <TextView
        android:id="@+id/forgotPwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pwd_sub_heading"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"
        app:layout_constraintStart_toStartOf="@id/tvForgotPassword"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_65sdp"/>

    <EditText
        android:id="@+id/etYourEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/your_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_65sdp"
        app:layout_constraintTop_toBottomOf="@id/forgotPwd"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etYourEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_45sdp"
        android:layout_marginLeft="@dimen/_45sdp"
        android:layout_marginRight="@dimen/_45sdp"
        android:background="@drawable/shape"
        android:text="Send"
        android:textAllCaps="false"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>