<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FirstFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/mainImg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/first_onboarding_screen" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/rectangle"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_63sdp" />

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/black"
        android:text="@string/discover"
        android:textSize="@dimen/_30sdp"
        app:layout_constraintTop_toTopOf="@id/img"
        app:layout_constraintStart_toStartOf="@id/img"
        app:layout_constraintEnd_toEndOf="@id/img"
        android:layout_marginTop="@dimen/_20sdp" />

    <TextView
        android:id="@+id/subHeading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/sub_string"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="@id/img"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="@id/img"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintTop_toBottomOf="@+id/tvHeading" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/get_ready"
        android:textAllCaps="false"
        android:paddingLeft="@dimen/_80sdp"
        android:paddingRight="@dimen/_80sdp"
        android:layout_marginBottom="@dimen/_50sdp"
        android:background="@drawable/shape_for_first_screen_btn"/>

</androidx.constraintlayout.widget.ConstraintLayout>