<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/topLayout"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_130sdp"
    android:layout_margin="@dimen/_10sdp"
    app:cardBackgroundColor="#0000"
    app:cardCornerRadius="@dimen/_5sdp"
    app:cardElevation="0dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="@dimen/_90sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_height="@dimen/_90sdp"
        app:cardBackgroundColor="@color/card_view_light_color">

        <ImageView
            android:id="@+id/ivDiningChair"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/dining_chair" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/daytona_dining_chair"
        app:layout_constraintStart_toEndOf="@id/cardView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/price_for_daytona"
        app:layout_constraintStart_toEndOf="@id/cardView"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnItem"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/shape_for_card_view"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/add_to_cart"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPrice" />

    <View
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_height="1dp"
        android:background="#E9E9E9"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <ImageView
        android:layout_width="wrap_content"
        android:elevation="@dimen/_50sdp"
        android:layout_height="wrap_content"
        android:src="@drawable/plus_icon"
        app:layout_constraintTop_toBottomOf="@id/tvPrice"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_80sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>


